--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3"
 
+networks:
+  nginx_net:
+    driver: bridge
+
 services: 
   postgres:
     image: postgres:12
@@ -12,56 +16,33 @@ services:
       POSTGRES_USER: root
     ports:
       - "5432:5432"
+    networks:
+      - nginx_net
 
-  # pgadmin:
-  #   container_name: pg_admin
-  #   image: dpage/pgadmin4
-  #   restart: always
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: admin@admin.com
-  #     PGADMIN_DEFAULT_PASSWORD: root
-  #   ports:
-  #     - "8080:80"
   node:
     build: 
       context: .
       dockerfile: Dockerfile.node
     command: "npm run start"
     environment:
-      - Node_ENV=production
+      - NODE_ENV=production
     expose:
-      - "80"
+      - "5050"
     ports:
       - "5050:5050"
+    networks:
+      - nginx_net
+    depends_on:
+      - postgres  # Esta linha garante que o node inicie após o postgres
+
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - nginx_net
 
 volumes:
   db_data:
-
-
-
-# docker build -t solidarize .
-# docker push geandersonlemonte/solidarize-docker
-# docker images | grep solidarize   
-#  docker volume rm solidarize_data
-#  docker volume ls
-
-
-
-#  docker-compose rm -f --> remover o container
-#  docker-compose stop --> parar o container
-#  docker-compose up --build -d --> construir o container
-#  docker-compose pull   --> enviar atualizacoes do container
-#  docker-compose logs   ---> visualizar logs
-
-
-# Sequencia de comandos para limpar do cache
-# docker-compose rm -f
-# docker-compose pull
-# docker-compose up --build -d
-# docker-compose stop
-
-# docker ps --> visualizar processos
-# docker inspect a319f97d5102 | grep IPAddress --> visualizar ip do processo
-
-# comando completo
-# docker-compose pull && docker-compose stop && docker-compose rm -f && docker-compose up --build -d
